--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -72,8 +72,11 @@
       <height>23</height>
      </rect>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
     <property name="styleSheet">
-     <string notr="true">color:rgb(0, 0, 0);</string>
+     <string notr="true">color:#000; background-color:white; border:2px solid #aaa; padding:2px;</string>
     </property>
    </widget>
    <widget class="Line" name="line">
@@ -122,6 +125,9 @@
       <width>191</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Valider</string>
